fix: add missing config files

--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -19,4 +19,4 @@ config-variables:
 paths:
   .github/workflows/**/*.{yml,yaml}:
     ignore:
-      - "shellcheck reported issue in this script: SC2086:.+"
+      - 'shellcheck reported issue in this script: SC2086:.+'
