--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "changelog-github-custom",
   "version": "0.22.1",
-  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sapientpants/changelog-github-custom.git"
+  },
   "type": "module",
   "packageManager": "pnpm@10.15.0",
   "engines": {
