--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changelog-github-custom",
-  "version": "0.22.2",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sapientpants/changelog-github-custom.git"
@@ -14,85 +14,75 @@
     "dev": "tsc --watch --preserveWatchOutput",
     "start": "node dist/index.js",
     "build": "tsc -p tsconfig.build.json",
-    "build:watch": "tsc -p tsconfig.build.json --watch",
+    "test": "vitest run --reporter=verbose",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "clean": "rm -rf dist coverage",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "typecheck:watch": "tsc -p tsconfig.json --noEmit --watch",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
     "lint:workflows": "./scripts/actionlint.sh",
     "lint:markdown": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
-    "lint:markdown:fix": "markdownlint-cli2 --fix \"**/*.md\" \"#node_modules\"",
     "lint:yaml": "yamllint '**/*.{yml,yaml}' --ignore='node_modules/**' --ignore='.github/workflows/**' --ignore='pnpm-lock.yaml'",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
-    "test": "vitest run --reporter=verbose",
-    "test:watch": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --reporter=verbose --coverage",
-    "test:coverage:watch": "vitest --coverage",
-    "coverage:report": "vitest run --coverage --reporter=verbose",
-    "coverage:open": "open coverage/index.html",
-    "clean": "rimraf dist coverage",
-    "reset": "pnpm clean && pnpm install",
-    "quick-check": "pnpm typecheck && pnpm lint && pnpm test",
-    "precommit": "pnpm audit --audit-level critical && pnpm typecheck && pnpm lint && pnpm lint:workflows && pnpm lint:markdown && pnpm lint:yaml && pnpm format && pnpm test",
-    "verify": "pnpm precommit",
-    "setup": "./scripts/setup.sh",
-    "lint-staged": "lint-staged",
-    "sbom": "pnpm dlx @cyclonedx/cdxgen -o sbom.cdx.json",
-    "scan:container": "./scripts/scan-container.sh",
-    "scan:container:sarif": "./scripts/scan-container.sh --format sarif --output container-scan.sarif",
-    "prepare": "husky",
-    "release": "changeset version && pnpm build",
-    "release:publish": "pnpm build && changeset publish",
-    "release:tag": "git add -A && git commit -m \"chore(release): version packages\" && git tag -a v$(node -p \"require('./package.json').version\") -m \"Release\"",
+    "security:audit": "pnpm audit --audit-level moderate",
+    "security:audit:critical": "pnpm audit --audit-level critical",
+    "security:osv": "osv-detector --lockfile=pnpm-lock.yaml",
+    "update": "pnpm update --latest",
+    "update:dependencies": "pnpm update",
+    "update:npm": "pnpm update --latest",
     "changeset": "changeset",
-    "changeset:status": "changeset status --since=main",
-    "ci:local": "./scripts/ci-local.sh",
-    "ci:local:fast": "./scripts/ci-local.sh --fast",
-    "doctor": "node -e \"console.log('Node:', process.version); console.log('npm scripts:', Object.keys(require('./package.json').scripts).length, 'available'); console.log('Run: pnpm run help')\"",
-    "help": "node -e \"const s=require('./package.json').scripts; console.log('Available commands:'); Object.keys(s).sort().forEach(k => console.log('  pnpm run ' + k.padEnd(20) + ' # ' + s[k].split(' ')[0]))\""
+    "changeset:version": "changeset version && pnpm install --no-frozen-lockfile",
+    "changeset:publish": "changeset publish",
+    "build:docker": "docker build . -t changelog-github-custom:latest",
+    "scan:docker": "./scripts/scan-container.sh",
+    "verify": "pnpm audit --audit-level critical && pnpm typecheck && pnpm lint && pnpm lint:workflows && pnpm lint:markdown && pnpm lint:yaml && pnpm format && pnpm test",
+    "verify:full": "pnpm run verify && pnpm run test:coverage",
+    "verify:ci": "pnpm run verify && pnpm run security:audit && pnpm run test:coverage",
+    "ci": "./scripts/ci-local.sh",
+    "prepare": "husky",
+    "prepublishOnly": "pnpm run build && pnpm run verify",
+    "precommit": "pnpm audit --audit-level critical && pnpm typecheck && pnpm lint && pnpm lint:workflows && pnpm lint:markdown && pnpm lint:yaml && pnpm format && pnpm test"
   },
-  "lint-staged": {
-    "*.{ts,tsx,js,json,md,yml,yaml}": [
-      "prettier --write"
-    ],
-    "*.{ts,tsx,js,json,jsonc,json5}": [
-      "eslint --fix"
-    ],
-    "*.md": [
-      "markdownlint-cli2 --fix"
-    ],
-    "*.{yml,yaml}": [
-      "yamllint"
-    ]
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/changelog-custom.js",
+  "module": "./dist/changelog-custom.js",
+  "types": "./dist/changelog-custom.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/changelog-custom.d.ts",
+      "import": "./dist/changelog-custom.js"
+    }
   },
   "dependencies": {
-    "pino": "9.9.5",
-    "pino-roll": "3.1.0",
-    "pino-syslog": "3.2.0",
-    "zod": "^4.1.8"
+    "@changesets/cli": "^2.28.1",
+    "@changesets/get-release-plan": "^4.0.6",
+    "@changesets/types": "^6.0.0",
+    "@sindresorhus/execa": "^9.5.3",
+    "dotenv": "^16.4.7",
+    "ora": "^8.1.1",
+    "picocolors": "^1.1.1",
+    "pino": "^9.5.0"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.29.7",
-    "@changesets/get-github-info": "0.6.0",
-    "@changesets/types": "6.1.0",
-    "@commitlint/cli": "19.8.1",
-    "@commitlint/config-conventional": "19.8.1",
-    "@cyclonedx/cdxgen": "11.7.0",
-    "@fast-check/vitest": "^0.2.2",
-    "@types/node": "^24.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
+    "@commitlint/cli": "^19.7.2",
+    "@commitlint/config-conventional": "^19.7.2",
+    "@types/node": "^22.13.1",
+    "@types/ora": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-jsonc": "2.20.1",
-    "fast-check": "^4.3.0",
-    "husky": "^9.1.7",
-    "jsonc-eslint-parser": "2.4.0",
-    "lint-staged": "^16.1.6",
-    "markdownlint-cli2": "0.18.1",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-unicorn": "^57.1.0",
+    "globals": "^15.14.0",
+    "husky": "^9.1.9",
+    "markdownlint-cli2": "^0.18.1",
+    "osv-detector": "^2.1.2",
     "pino-pretty": "13.1.1",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
