--- a/.npmrc
+++ b/.npmrc
@@ -2,4 +2,4 @@ engine-strict=true
 save-exact=true
 fund=false
 audit=true
-@your-scope:registry=https://registry.npmjs.org/
+@sapientpants:registry=https://registry.npmjs.org/
