--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "coverage:report": "vitest run --coverage --reporter=verbose",
     "coverage:open": "open coverage/index.html",
     "clean": "rimraf dist coverage",
+    "deps:check": "depcheck",
     "reset": "pnpm clean && pnpm install",
     "quick-check": "pnpm typecheck && pnpm lint && pnpm test",
-    "precommit": "pnpm audit --audit-level critical && pnpm typecheck && pnpm lint && pnpm lint:workflows && pnpm lint:markdown && pnpm lint:yaml && pnpm format && pnpm test",
+    "precommit": "pnpm audit --audit-level critical && pnpm deps:check && pnpm typecheck && pnpm lint && pnpm lint:workflows && pnpm lint:markdown && pnpm lint:yaml && pnpm format && pnpm test",
     "verify": "pnpm precommit",
     "setup": "./scripts/setup.sh",
     "lint-staged": "lint-staged",
@@ -64,7 +65,6 @@
     ]
   },
   "dependencies": {
-    "@changesets/get-release-plan": "^4.0.6",
     "@changesets/types": "^6.1.0"
   },
   "devDependencies": {
@@ -74,18 +74,17 @@
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@cyclonedx/cdxgen": "11.7.0",
-    "@fast-check/vitest": "^0.2.2",
     "@types/node": "^24.3.3",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint-config-prettier": "^10.1.8",
+    "depcheck": "1.4.7",
     "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsonc": "2.20.1",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-unicorn": "^61.0.2",
-    "fast-check": "^4.3.0",
     "globals": "^16.4.0",
     "husky": "^9.1.7",
     "jsonc-eslint-parser": "2.4.0",
