fix: correct exports configuration for ESM-only package
- Update main and exports fields to point to dist/src/changelog-custom.js
- Remove incorrect CommonJS export since this is ESM-only (type: module)
- Add types export for TypeScript support
- Fixes ERR_PACKAGE_PATH_NOT_EXPORTED error when used by changesets

--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "private": false,
   "type": "module",
-  "main": "./dist/index.js",
+  "main": "./dist/src/changelog-custom.js",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "import": "./dist/src/changelog-custom.js",
+      "types": "./dist/src/changelog-custom.d.ts",
+      "default": "./dist/src/changelog-custom.js"
     }
   },
   "files": [
